# final-project-assignment-aesd-kevrocks67

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  coverage-badge.json  index.html  latest_version.txt  version-badge.json
.github/workflows/: github-actions.yml
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/src/: door_sensor.c.func-c.html  door_sensor.c.func.html  door_sensor.c.gcov.html  fsm.c.func-c.html  fsm.c.func.html  fsm.c.gcov.html  fsm_handlers.c.func-c.html  fsm_handlers.c.func.html  fsm_handlers.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html  input_utils.c.func-c.html  input_utils.c.func.html  input_utils.c.gcov.html  keypad_parser.c.func-c.html  keypad_parser.c.func.html  keypad_parser.c.gcov.html  lock.c.func-c.html  lock.c.func.html  lock.c.gcov.html  pin_entry.c.func-c.html  pin_entry.c.func.html  pin_entry.c.gcov.html
docs/: Doxyfile  annotated.html  annotated_dup.js  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  door__sensor_8c.html  door__sensor_8c.js  door__sensor_8c__incl.md5  door__sensor_8h.html  door__sensor_8h.js  door__sensor_8h__dep__incl.md5  door__sensor_8h__incl.md5  door__sensor_8h_a87f217deba834a45daee405a4a873120_icgraph.md5  door__sensor_8h_source.html  files.html  fsm_8h.html  fsm_8h.js  fsm_8h__dep__incl.md5  fsm_8h__incl.md5  fsm_8h_source.html  fsm__handlers_8h.html  fsm__handlers_8h.js  fsm__handlers_8h__incl.md5  fsm__handlers_8h_a8c042a7bf4e83bf2c3200403a4d8f7c8_cgraph.md5  fsm__handlers_8h_a9e0b56fb609ebbbbc30e05e117c6866a_cgraph.md5  fsm__handlers_8h_source.html  fsm__table_8h.html  fsm__table_8h.js  fsm__table_8h__incl.md5  fsm__table_8h_source.html  fsm__types_8h.html  fsm__types_8h.js  fsm__types_8h__dep__incl.md5  fsm__types_8h__incl.md5  fsm__types_8h_source.html  (+52 more)
docs/search/: all_0.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+17 more)
include/: door_sensor.h  fsm.h  fsm_handlers.h  fsm_table.h  fsm_types.h  input_utils.h  keypad_logic.h  keypad_parser.h  lock.h  pin_entry.h
latex_src/: annotated.tex  door__sensor_8c.tex  door__sensor_8c__incl.md5  door__sensor_8h.tex  door__sensor_8h__dep__incl.md5  door__sensor_8h__incl.md5  door__sensor_8h_a87f217deba834a45daee405a4a873120_icgraph.md5  door__sensor_8h_source.tex  files.tex  fsm_8h.tex  fsm_8h__dep__incl.md5  fsm_8h__incl.md5  fsm_8h_source.tex  fsm__handlers_8h.tex  fsm__handlers_8h__incl.md5  fsm__handlers_8h_a8c042a7bf4e83bf2c3200403a4d8f7c8_cgraph.md5  fsm__handlers_8h_a9e0b56fb609ebbbbc30e05e117c6866a_cgraph.md5  fsm__handlers_8h_source.tex  fsm__table_8h.tex  fsm__table_8h__incl.md5  fsm__table_8h_source.tex  fsm__types_8h.tex  fsm__types_8h__dep__incl.md5  fsm__types_8h__incl.md5  fsm__types_8h_source.tex  index.tex  input__utils_8h.tex  input__utils_8h__dep__incl.md5  input__utils_8h_source.tex  keypad__parser_8c.tex  keypad__parser_8c__incl.md5  keypad__parser_8h.tex  keypad__parser_8h__dep__incl.md5  keypad__parser_8h__incl.md5  keypad__parser_8h_source.tex  lock_8h.tex  lock_8h__dep__incl.md5  lock_8h__incl.md5  lock_8h_source.tex  main_8c.tex  (+10 more)
pkg/buildroot/: S99door_security_daemon
pkg/swupdate/: sw-description.tmpl  update_app_version.sh
releases/: door-app-update-03328c6.swu  door-app-update-3e85137.swu  door-app-update-5ffbdb8.swu  door-app-update-ad4b84c.swu  door-app-update-b845da7.swu
src/: door_sensor.c  fsm.c  fsm_handlers.c  fsm_table.c  input_utils.c  keypad_logic.c  keypad_parser.c  lock.c  main.c  pin_entry.c
tests/: test_door_sensor.c  test_fsm.c  test_fsm_handlers.c  test_input_utils.c  test_keypad_logic.c  test_keypad_parser.c  test_lock.c  test_pin_entry.c
tests/mocks/: mock_devices.txt  test_utils.c  test_utils.h
